implement floating auto-width table quirk

BUG: 123830

tests/floats/table-quirk.html


svn path=/branches/KDE/3.5/kdelibs/; revision=553805